Fixed post content area

--- a/src/app/post/post-list/post-list.component.css
+++ b/src/app/post/post-list/post-list.component.css
@@ -1,4 +1,16 @@
-mat-card {
+/* mat-card {
+    margin: 0.5em;
+    max-width: 600px;
+    margin: 16px auto;
+  }
+  mat-form-field {
+    width: 100%;
+  }
+  img {
+    width: 100%;
+  } */
+
+  mat-card {
     margin: 0.5em;
     max-width: 600px;
     margin: 16px auto;
