--- a/src/app/post/post-dashboard/post-dashboard.component.css
+++ b/src/app/post/post-dashboard/post-dashboard.component.css
@@ -1,4 +1,24 @@
-mat-card {
+/* mat-card {
+    margin: 10px;
+    max-width: 600px;
+    margin: 16px auto;
+  }
+  mat-form-field {
+    width: 100%;
+  }
+  mat-card-actions {
+    padding: 0.5em;
+  }
+  img {
+    width: 100%;
+  }
+  .image-preview {
+    width: 100%;
+    min-height: 50px;
+    background-color: #f6f6f6;
+  } */
+
+  mat-card {
     margin: 10px;
     max-width: 600px;
     margin: 16px auto;
