--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,4 +1,23 @@
-<main *ngFor="let post of posts | async">
+<!-- <main *ngFor="let post of posts | async">
+    <mat-card routerLink="{{post.id}}">
+        <img src="{{post.image}}" alt=" {{ post.title}}" [hidden]="post.image == null" />
+        <mat-card-content>
+            <mat-card-title>{{ post.title }} </mat-card-title> 
+            <mat-card-subtitle>
+                Posted byyy:: {{ post.author}} ,,, {{ post.published.seconds * 1000 | date:'yyyy/MM/dd h:mm:ss a' | fromNow}}
+            </mat-card-subtitle>
+        </mat-card-content>
+    </mat-card>
+</main> -->
+
+
+
+<!-- <main *ngFor="let post of posts | async">
+    <app-post-list-item [post]="post"></app-post-list-item>
+</main> -->
+
+    
+<!-- <main *ngFor="let post of posts | async">
 
     <mat-card routerLink="{{post.id}}">
        
@@ -12,10 +31,13 @@
                 Posted byyy:: {{ post.author}} ,,, {{ post.published.seconds * 1000 | date:'yyyy/MM/dd h:mm:ss a' | fromNow}}
             </mat-card-subtitle>
 
-            <!-- <p> {{ post.id }} </p>
-            <p> {{ post.content }} </p> -->
 
         </mat-card-content>
     </mat-card>
     
 </main>
+   -->
+  
+   <main *ngFor="let post of posts | async">
+    <app-post-list-item [post]="post"></app-post-list-item>
+  </main>
