--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
   <a routerLink="me">Dashboard</a> | 
   <a routerLink="blog">Blog</a> | 
   <a routerLink="users">Users</a> | 
-  <a routerLink="/">Gallery</a>
+  <a routerLink="gallery">Gallery</a>
 </div>
 <router-outlet></router-outlet>
