--- a/src/app/gallery/gallery-detail/gallery-detail.component.html
+++ b/src/app/gallery/gallery-detail/gallery-detail.component.html
@@ -1,1 +1,17 @@
-<p>gallery-detail works!</p>
+<!-- <mat-card *ngIf = "image">
+    <img [src]="image.url" alt="{{image.name}}">
+    <mat-card-action>
+        <button >
+            <mat-icon> Delete </mat-icon>
+        </button >
+    </mat-card-action>
+</mat-card> -->
+
+<mat-card *ngIf="image">
+    <img [src]="image.url" alt="{{image.name}}">
+    <mat-card-actions align="end">
+      <button mat-icon-button (click)="delete()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
