Added feature for chat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 
-<div>
-  <a routerLink="me">Dashboard</a> | 
-  <a routerLink="blog">Blog</a> | 
-  <a routerLink="users">Users</a> | 
-  <a routerLink="gallery">Gallery</a>
-</div>
+ <div>
+  <a mat-raised-button routerLink="me">Dashboard</a> 
+  <a mat-raised-button routerLink="blog">Blog</a> 
+  <a mat-raised-button routerLink="users">Users</a> 
+  <a mat-raised-button routerLink="gallery">Gallery</a> 
+  <a mat-raised-button routerLink="chat">Chat</a>
+</div> 
+
 <router-outlet></router-outlet>
