--- a/src/app/user/user-details/user-details.component.html
+++ b/src/app/user/user-details/user-details.component.html
@@ -11,5 +11,21 @@
       <mat-card-content>
         <p>{{user.uid}}</p>
       </mat-card-content>
+
+      <mat-card-footer align="end">
+        <button mat-mini-fab (click)="chat()">
+          <mat-icon>chat</mat-icon>
+        </button>
+      </mat-card-footer>
+  
+
+      <!-- <mat-card-footer align="end">
+        <button mat-mini-fab (click)="chat()">
+          <mat-icon>chat</mat-icon>
+        </button>
+      </mat-card-footer> -->
+  
+
+      
     </mat-card>
   </div>
