--- a/src/app/chat/chat-thread/chat-thread.component.html
+++ b/src/app/chat/chat-thread/chat-thread.component.html
@@ -1,7 +1,18 @@
-<mat-list>
+<!-- <mat-list>
     <mat-list-item>
         <img [src]=" thread.avatar || '//:0'">
         <p mat-line>{{thread.id}}</p>
         <p mat-line>last message here</p>
     </mat-list-item>
-</mat-list>
+</mat-list> -->
+
+<mat-list>
+    <mat-list-item>
+      <img matListAvatar [src]="thread.avatar || '//:0'">
+      <p mat-line>{{thread.creator}}</p>
+      <p mat-line>{{thread.lastMessage}}</p>
+      <button mat-icon-button (click)="delete(thread.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-list-item>
+  </mat-list>
