--- a/src/app/chat/chat-threads/chat-threads.component.html
+++ b/src/app/chat/chat-threads/chat-threads.component.html
@@ -2,6 +2,10 @@
     <app-chat-thread [thread]="thread"></app-chat-thread>
 </main> -->
 
-<main *ngFor="let thread of threads | async" routerLink="{{ thread.id}}">
+<!-- <main *ngFor="let thread of threads | async" routerLink="{{ thread.id}}">
+    <app-chat-thread [thread]="thread"></app-chat-thread>
+  </main> -->
+
+  <main *ngFor="let thread of threads | async" routerLink="{{thread.id}}">
     <app-chat-thread [thread]="thread"></app-chat-thread>
   </main>
