--- a/src/app/post/post-dashboard/post-dashboard.component.html
+++ b/src/app/post/post-dashboard/post-dashboard.component.html
@@ -38,8 +38,7 @@
       <!-- add #resetMe // we will use it to reference this input field -->
       <input #resetMe type="file" name="file" id="file" (change)="uploadPostImage($event)">
   
-      <!-- add the "|| !imageURL" to the hidden condition here too 
-              as we can't easily reset an observable -->
+      <!-- add the "|| !imageURL" to the hidden condition here too as we can't easily reset an observable -->
       <div [hidden]="!uploadPercent || !imageURL">
         <mat-progress-bar mode="determinate" value="{{ uploadPercent | async }}"></mat-progress-bar>
       </div>
