--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-
+<!-- 
  <div>
   <a mat-raised-button routerLink="me">Dashboard</a> 
   <a mat-raised-button routerLink="blog">Blog</a> 
   <a mat-raised-button routerLink="users">Users</a> 
   <a mat-raised-button routerLink="gallery">Gallery</a> 
   <a mat-raised-button routerLink="chat">Chat</a>
-</div> 
+</div>  -->
 
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
