--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,13 +6,13 @@
 
         <mat-form-field [formGroup]="signUpForm">
             <input matInput placeholder="Enter your email" [formControl]="email" required>
-            <mat-error *ngIf="email.Valid"> Not a Valid Email</mat-error>
+            <mat-error *ngIf="email.valid"> Not a Valid Email</mat-error>
         </mat-form-field>
 
         <mat-form-field [formGroup]="signUpForm">
             <input matInput placeholder="Enter your Password" [type]="hide ? 'password' : 'text'" [formControl]="password" required> 
             <mat-icon matSuffix (click)="hide = !hide"> {{ hide ? 'visibility' : 'visibility_off'}}</mat-icon>
-            <mat-error *ngIf="password.Valid"> Not a Valid Password</mat-error>
+            <mat-error *ngIf="password.valid"> Not a Valid Password</mat-error>
         </mat-form-field>
 
         <button mat-raised-button type="submit" color="accent">Sign up</button>
