--- a/src/app/chat/chat-detail/chat-detail.component.css
+++ b/src/app/chat/chat-detail/chat-detail.component.css
@@ -1,4 +1,25 @@
-mat-toolbar{
+mat-toolbar {
+    background-color: var(--app-primary-color);
+    color: white;
+    height: 50px;
+  }
+  .chat-feed {
+    overflow-y: scroll;
+    overflow: auto;
+    height: calc(100vh - 120px)
+  }
+  .chat-input {
+    position: fixed;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .spacer {
+    flex: 1 1 auto
+  }
+  
+/* mat-toolbar{
     background-color: var(--app-primary-color);
     color: white;
     height: 50px;
@@ -17,4 +38,4 @@ mat-toolbar{
     bottom: 0;
     left: 0;
     right: 0;
-}
+} */
