--- a/src/app/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat-detail/chat-detail.component.html
@@ -1,4 +1,30 @@
 <main>
+  <!-- <mat-toolbar>
+    <button mat-icon-button>
+        <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+       <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+     <button mat-menu-item (click)="delete()">
+        <mat-icon>delete</mat-icon>
+       <span>Delete</span>
+  </button>
+  </mat-menu>
+</mat-toolbar> -->
+
+    <div class="chat-feed" #scroller>
+      <app-chat-feed></app-chat-feed>
+    </div>
+    <div class="chat-input">
+      <hr>
+      <app-chat-input></app-chat-input>
+    </div>
+  </main>
+  
+  <!-- <main>
     <mat-toolbar>
         <button mat-icon-button>
             <mat-icon>arrow_back</mat-icon>
@@ -12,4 +38,4 @@
         <hr>
         <app-chat-input></app-chat-input>
     </div>
-</main>
+</main> -->
