--- a/src/app/chat/chat-feed/chat-feed.component.html
+++ b/src/app/chat/chat-feed/chat-feed.component.html
@@ -1,1 +1,3 @@
-<app-chat-messages> </app-chat-messages>
+<app-chat-messages></app-chat-messages>
+<!-- <app-chat-messages> </app-chat-messages> -->
+
