--- a/src/app/chat/chat-messages/chat-messages.component.html
+++ b/src/app/chat/chat-messages/chat-messages.component.html
@@ -1,3 +1,7 @@
 <div *ngFor="let message of messages | async">
     <app-chat-message [message]="message"></app-chat-message>
-</div>
+  </div>
+
+<!-- <div *ngFor="let message of messages | async">
+    <app-chat-message [message]="message"></app-chat-message>
+</div> -->
