--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,12 +1,12 @@
-<mat-toolbar>
+<!-- <mat-toolbar>
     <button mat-icon-button (click)="goBack()">
          <mat-icon>arrow_back</mat-icon>
     </button>
         <span class="spacer"></span>
         <button mat-button (click)="editing=false" *ngIf="editing">Done</button>
         <button mat-button (click)="editing=true" *ngIf="!editing">Edit Profile</button>
-</mat-toolbar>
-
+</mat-toolbar> -->
+user dashboard
 <ng-container *ngIf="user">
     <div [hidden]="editing"> 
         <div class="hero">
@@ -17,12 +17,17 @@
             <div class="hero-text">
                 <h1>{{user.displayName}}</h1>
                 <p>{{user.email}}</p>
+                <br><br>
+                <button mat-button (click)="editing=true" *ngIf="!editing">Edit Profile</button>
             </div>
         </div>
-        <!-- <app-post-dashboard></app-post-dashboard> -->
+        
       <mat-card>
+        <h3>Add Photo</h3>
         <app-upload [path]="path" [meta]="meta" [uploadType]="uploadType"></app-upload>
       </mat-card>
+
+      <app-post-dashboard></app-post-dashboard>
 
     </div>
     <div [hidden]="!editing">
