--- a/src/app/post/post-list-item/post-list-item.component.html
+++ b/src/app/post/post-list-item/post-list-item.component.html
@@ -1,12 +1,12 @@
 <main>
   <div [hidden]="editing">
     <mat-card>
-
+      
       <div routerLink="{{post.id}}">
         <img src="{{post.image}}" alt="{{post.title}}" [hidden]="post.image == null">
         <mat-card-content>
           <mat-card-title>{{post.title}}</mat-card-title>
-          <mat-card-subtitle>posted by {{ post.author }} {{ post.published }} </mat-card-subtitle>
+          <mat-card-subtitle>posted by {{ post.author }} {{ post.published | date:'yyyy/MM/dd h:mm:ss a'}} </mat-card-subtitle>
         </mat-card-content>
       </div>
 
@@ -24,6 +24,8 @@
       </mat-card-actions>
     </mat-card>
   </div>
+
+
   <div [hidden]="!editing">
     <mat-card>
       <mat-card-content>
